python file comment + git ignore

--- a/python.ipynb
+++ b/python.ipynb
@@ -6,7 +6,9 @@
    "id": "b4516e7c-1071-4f42-9c87-a58a2d3a0456",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Put code here!"
+   ]
   }
  ],
  "metadata": {
